crates/ty_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_With_non-callable_iterator.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - With non-callable iterator
mdtest path: crates/ty_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | def _(flag: bool):
 4 |     class NotIterable:
 5 |         if flag:
 6 |             __iter__: int = 1
 7 |         else:
 8 |             __iter__: None = None
 9 | 
10 |     # error: [not-iterable]
11 |     for x in NotIterable():
12 |         pass
13 | 
14 |     # revealed: Unknown
15 |     # error: [possibly-unresolved-reference]
16 |     reveal_type(x)
```

# Diagnostics

```
error: lint:not-iterable: Object of type `NotIterable` is not iterable
  --> src/mdtest_snippet.py:11:14
   |
10 |     # error: [not-iterable]
11 |     for x in NotIterable():
   |              ^^^^^^^^^^^^^
12 |         pass
   |
info: Its `__iter__` attribute has type `int | None`, which is not callable
info: `lint:not-iterable` is on by default

```

```
warning: lint:possibly-unresolved-reference: Name `x` used when possibly not defined
  --> src/mdtest_snippet.py:16:17
   |
14 |     # revealed: Unknown
15 |     # error: [possibly-unresolved-reference]
16 |     reveal_type(x)
   |                 ^
   |
info: `lint:possibly-unresolved-reference` is on by default

```

```
info: revealed-type: Revealed type
  --> src/mdtest_snippet.py:16:5
   |
14 |     # revealed: Unknown
15 |     # error: [possibly-unresolved-reference]
16 |     reveal_type(x)
   |     ^^^^^^^^^^^^^^ `Unknown`
   |

```
